--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Yongrui Chen"
+title                    : "Yongrui Chen's Academic Page"
 title_separator          : "-"
 name                     : &name "Yongrui Chen"
 description              : &description "personal description"
