--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "bahuia/bahuia.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "avatar.png"
+  avatar           : "avatar1.png"
   name             : "Yongrui Chen"
   pronouns         : # example: "she/her"  
   bio              : "Postdoctoral Fellow, School of Computer Science and Engineering, Southeast University"
