modify the avatar

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Nanjing, China"
   employer         : "Southeast University"
   uri              : # URL
-  email            : "yr.chen.bahuia@outlook.com"
+  email            : "yongruichen@seu.edu.cn"
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
